Add tests and virtualized test runtime
Fix #7